[FIX] fix menu alignement

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1421,7 +1421,7 @@ div#menu li:nth-child(6n+6) {
 		position: relative;
 		display: inline-block;
 		margin: 0 auto;
-		padding: 0.5em 0.3em;
+		padding: 0.1em 0.3em;
 		border-radius: 50%;
 		width: 50px;
 		height: 50px;
